k8s/domains/plans/components/api/infra/base/plans-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: plans-api
spec:
  selector:
    matchLabels:
      app: plans-api
  replicas: 3
  template:
    metadata:
      labels:
        app: plans-api
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: plans-api
          image: ghcr.io/mstaicu/plans-api
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /livez
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2
