k8s/domains/plans/components/api/infra/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: plans-api
spec:
  selector:
    app: plans-api
  ports:
    - name: plans-api
      port: 3000
      targetPort: 3000
