k8s/domains/plans/components/api/infra/base/internal-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-internal
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: >-
        PathRegexp(`^/v1/accounts/[^/]+/plan$`)
      services:
        - name: api
          port: 3000
